<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/moduleSelectionFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_selectModule" />
        <item
            android:id="@+id/moduleListFragment"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_allModules" />
        <item
            android:id="@+id/accountSettingsFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_myAccount" />
        <item
            android:id="@+id/moduleAddFragment"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_addModule" />
    </group>
</menu>